--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -51,6 +51,7 @@ user.changePass.success=Password changed sucessfully
 user.oldPass=Old Password
 user.newPass=New Password
 
+
 group = Group
 groups = Groups
 groupRoles = Group Roles
@@ -94,3 +95,4 @@ logon.usernameRequired=the username is required
 logon.passwordRequired=the password is required
 
 test.permission=Action performed by user:{0} which has the following roles: {1}
+security.role-allowed=Only role {0} is allowed to perform this task.
