--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -93,3 +93,6 @@ logon.info.successful= Login feito com sucesso.
 logon.be.incorrect=Login falhou - usuário ou senha incorretos.
 logon.usernameRequired = Usuário é campo obrigatório
 logon.passwordRequired=Senha é campo obrigatório
+
+test.permission=Ação executada pelo usuário:{0} o qual possui os seguintes perfis: {1}
+security.role-allowed=Somente o perfil {0} está autorizado para executar esta tarefa.
