no commit message

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -29,7 +29,7 @@ message = Message
 default-security-message=You don't have permission to perform this action
 
 user = User
-userGroups = Groups of {0} 
+userGroups = Groups of
 user.find = List users 
 user.new = New user
 user.edit = Edit user 
