--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -28,6 +28,7 @@ error.message = Mensagem de erro
 detail = Detalhe
 message = Mensagem
 default-security-message=Você não possui permissão para executar esta ação
+logout=Sair
 
 user = Usu\u00E1rio
 userGroups = Grupos de {0}
