--- a/src/test/resources/test-messages_en.properties
+++ b/src/test/resources/test-messages_en.properties
@@ -27,6 +27,7 @@ error.message = Error message
 detail = Detail
 message = Message
 default-security-message=You don't have permission to perform this action
+logout=Logout
 
 user = User
 userGroups = Groups of {0}
