initial drop in BDD tests

--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -86,6 +86,8 @@ role.available = Perfis Dispon\u00EDveis
 role.create.message = Perfil criado com sucesso.
 role.update.message = Perfil atualizado com sucesso.
 role.delete.message = Perfil removido com sucesso.
+role.be.admin = Não é possível remover o papel administrador
+role.be.groups = NNão é possível remover papéis associados a grupos
 
 logon.header=Login - Informe suas credenciais
 logon.username=Usuário
