--- a/src/test/resources/test-messages_en.properties
+++ b/src/test/resources/test-messages_en.properties
@@ -86,6 +86,9 @@ role.available = Available Roles
 role.create.message = Role created successfully.
 role.update.message = Role updated successfully.
 role.delete.message = Role removed successfully.
+role.be.admin = Cannot remove admin role
+role.be.groups = Cannot remove roles associated with groups
+
 
 logon.header=Logon - enter your credentials
 logon.username=Username
