--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -1,25 +1,25 @@
-# prefixo = p\u00e1gina
+# prefixo = página
 # meio = componente
-# sufixo = descri\u00e7\u00e3o da mensagem
-# ex p\u00e1gina.label.descricao1.descricao2.....descricaoN
+# sufixo = descrição da mensagem
+# ex página.label.descricao1.descricao2.....descricaoN
 
 
-welcome = BEM-VINDO ao Arqu\u00E9tipo do Conventions Framework
+welcome = BEM-VINDO ao Arquétipo do Conventions Framework
 title = Arquetipo - Conventions Framework
 home = Inicio
 back = Voltar
-createDate = Data de cria\u00E7\u00E3o
-updateDate = Data atualiza\u00E7\u00E3o
+createDate = Data de criação
+updateDate = Data atualização
 create = Criar
 edit = Editar
 find = Buscar
-version = Vers\u00E3o
+version = Versão
 recordsFound = Registros encontrados
 save = Salvar
 timeout.reload = Recarregar
-expire.message = A sess\u00E3o expirou, entre novamente no sistema.
-timeout.header = Sess\u00E3o expirada.
-actions = A\u00E7\u00F5es
+expire.message = A sessão expirou, entre novamente no sistema.
+timeout.header = Sessão expirada.
+actions = Ações
 clear = Limpar
 error = Erro
 error.unexpected = Erro inexperado - clique aqui
@@ -30,19 +30,19 @@ message = Mensagem
 default-security-message=Você não possui permissão para executar esta ação
 logout=Sair
 
-user = Usu\u00E1rio
+user = Usuário
 userGroups = Grupos de {0}
-user.find = Listar usu\u00E1rios 
-user.new = Novo usu\u00E1rio 
-user.edit = Editar usu\u00E1rio 
-user.notfound = Nenhum usu\u00E1rio encontrado.
+user.find = Listar usuários 
+user.new = Novo usuário 
+user.edit = Editar usuário 
+user.notfound = Nenhum usuário encontrado.
 user.associateGroup = Associar Grupo
 user.manageGroup = Gerenciar Grupos
 user.findGroup = Buscar grupos
-user.create.message = Usu\u00E1rio criado com sucesso.
-user.update.message = Usu\u00E1rio atualizado com sucesso.
-user.delete.message = Usu\u00E1rio removido com sucesso.
-be.user.existing = Usu\u00E1rio j\u00E1 cadastrado.
+user.create.message = Usuário criado com sucesso.
+user.update.message = Usuário atualizado com sucesso.
+user.delete.message = Usuário removido com sucesso.
+be.user.existing = Usuário já cadastrado.
 be.user.remove=Não é possível remover usuário com grupos.
 user.groupAdded = Grupo adicionado com sucesso.
 user.changePass=Alterar
@@ -68,10 +68,10 @@ group.roleAdded = Perfil adicionado com sucesso.
 group.create.message = Grupo criado com sucesso.
 group.update.message = Grupo atualizado com sucesso.
 group.delete.message = Grupo removido com sucesso.
-group.info.removed = Grupo <span style\='text-decoration\:underline'> {0} </span> removido, clique no bot\u00E3o <span style\='text-decoration\:underline'> {1} </span> para completar a transa\u00E7\u00E3o.
-group.business01 = N\u00E3o \u00E9 poss\u00EDvel remover grupos com perfis associados.
-group.business02 = N\u00E3o \u00E9 poss\u00EDvel remover grupos com usu\u00E1rios associados.
-group.business03 = Grupo j\u00E1 cadastrado.
+group.info.removed = Grupo <span style\='text-decoration\:underline'> {0} </span> removido, clique no botão <span style\='text-decoration\:underline'> {1} </span> para completar a transação.
+group.business01 = Não é possível remover grupos com perfis associados.
+group.business02 = Não é possível remover grupos com usuários associados.
+group.business03 = Grupo já cadastrado.
 
 
 roles = Perfis
@@ -82,12 +82,12 @@ role.edit = Editar perfil
 role.notfound = Nenhum perfil encontrado.
 role.notAssociated = Nenhum perfil associado.
 role.associated = Perfis do Grupo
-role.available = Perfis Dispon\u00EDveis
+role.available = Perfis Disponíveis
 role.create.message = Perfil criado com sucesso.
 role.update.message = Perfil atualizado com sucesso.
 role.delete.message = Perfil removido com sucesso.
 role.be.admin = Não é possível remover o papel administrador
-role.be.groups = NNão é possível remover papéis associados a grupos
+role.be.groups = Não é possível remover papéis associados a grupos
 
 logon.header=Login - Informe suas credenciais
 logon.username=Usuário
