- app version at home

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # and open the template in the editor.
 
 
-
+version=${project.version}
 welcome = Welcome to Conventions Framework Example App
 title = Conventions Archetype
 home = Home
@@ -12,7 +12,6 @@ updateDate = Update date
 create = Create
 edit = Edit
 find = Find
-version = Version
 recordsFound = Records found
 save = Save
 timeout.reload = Reload
