--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -3,7 +3,7 @@
 # sufixo = descrição da mensagem
 # ex página.label.descricao1.descricao2.....descricaoN
 
-
+version=${project.version}
 welcome = BEM-VINDO ao Arquétipo do Conventions Framework
 title = Arquetipo - Conventions Framework
 home = Inicio
